# proto1

./: CMakeLists.txt  Makefile  Readme.md  grammar.js  install.sh  package.json  pyproject.toml  setup.py  todo.txt
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
compiler/: abstract.py  emission.py  expr.py  lex.py  objs.py  sym.py  tree.py
docs/: expr.html  heap.html
lang/: Readme.md  todo.txt  vm.py
lang/compiler/: emission.py  error.py  expr.py  lex.py  main.py  objs.py  sym.py  tree.py
lang/lib/: block.snug  dyn.snug  expr.snug  lex.snug  mem.snug  str.snug  string.snug
lang/mockup/: param.snug
lang/prg/: fac.snug  pers.snug  string.snug  test.snug  true_recurse.snug  void.snug
lib/: dyn.snug  mem.snug  stack.snug
mockup/: mem.snug  param.snug
prg/: bf.snug  count.snug  heap.snug  string.snug  test.snug  tree.snug
proto/: build.txt  compiler.py  interp.py  test1.txt  test2.txt  todo.txt  vm.py
proto/lang/: makefile  todo.txt  vm.py
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
sys/: layout.ld  makefile  mkimg.py
tree-sitter-snug/: Cargo.toml  Package.swift  binding.gyp  go.mod  init.lua  tree-sitter.json
tree-sitter-snug/bindings/c/: tree-sitter-snug.pc.in
tree-sitter-snug/bindings/go/: binding.go
tree-sitter-snug/bindings/python/tree_sitter_snug/: __init__.py
tree-sitter-snug/bindings/swift/TreeSitterSnug/: snug.h
tree-sitter-snug/bindings/swift/TreeSitterSnugTests/: TreeSitterSnugTests.swift
tree-sitter-snug/src/: grammar.json
(+50 files in other folders)
