[package]
name = "tree-sitter-snug"
description = "Parser for the Snug programming language"
version = "0.1.0"
authors = ["S1monr3dst0ne07"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "snug"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/snugl/tree-sitter-snug.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
